--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
-.App {
-  text-align: center;
+.blur {
+  background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(8px);
+  height: 100vh;
+  width: 50%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -22,15 +25,198 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card::before:hover {
+  animation: glow-pulse 30s infinite;
+  opacity: 1;
 }
 
-button {
-  font-size: calc(10px + 2vmin);
+.card::before {
+  content: "";
+  position: absolute;
+  opacity: 0;
+  width: 286px;
+  height: 395px;
+  background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/436243/Lyra_the_Sunshard(55545)_Gold.png');
+  background-size: cover;
+  background-position: center;
+  top: 0;
+  left: 0;
+  transition: all 0.3s ease-out;
+  transform: translate(-11%, -7%) scale(1.075);
+  filter: brightness(2) sepia(1) hue-rotate(180deg) saturate(4) blur(7px);
+}
+.card {
+  width: 286px;
+  height: 395px;
+}
+
+@keyframes glow-pulse {
+  10% {
+    opacity: 0;
+  }
+  11% {
+    opacity: 0;
+  }
+  13% {
+    opacity: 0.9;
+  }
+  15% {
+    opacity: 0.9;
+  }
+  15% {
+    opacity: 0;
+  }
+  16% {
+    opacity: 0;
+  }
+  18% {
+    opacity: 0.6;
+  }
+  20% {
+    opacity: 0.6;
+  }
+  25% {
+    opacity: 0;
+  }
+  26% {
+    opacity: 0;
+  }
+  28% {
+    opacity: 0.9;
+  }
+  30% {
+    opacity: 0.9;
+  }
+  30% {
+    opacity: 0;
+  }
+  31% {
+    opacity: 0;
+  }
+  33% {
+    opacity: 0.7;
+  }
+  35% {
+    opacity: 0.7;
+  }
+  35% {
+    opacity: 0;
+  }
+  36% {
+    opacity: 0;
+  }
+  38% {
+    opacity: 0.9;
+  }
+  40% {
+    opacity: 0.9;
+  }
+  40% {
+    opacity: 0;
+  }
+  41% {
+    opacity: 0;
+  }
+  43% {
+    opacity: 0.9;
+  }
+  45% {
+    opacity: 0.9;
+  }
+  45% {
+    opacity: 0;
+  }
+  46% {
+    opacity: 0;
+  }
+  48% {
+    opacity: 0.8;
+  }
+  50% {
+    opacity: 0.8;
+  }
+  50% {
+    opacity: 0;
+  }
+  51% {
+    opacity: 0;
+  }
+  53% {
+    opacity: 0.7;
+  }
+  55% {
+    opacity: 0.7;
+  }
+  60% {
+    opacity: 0;
+  }
+  61% {
+    opacity: 0;
+  }
+  63% {
+    opacity: 0.9;
+  }
+  65% {
+    opacity: 0.9;
+  }
+  65% {
+    opacity: 0;
+  }
+  66% {
+    opacity: 0;
+  }
+  68% {
+    opacity: 0.8;
+  }
+  70% {
+    opacity: 0.8;
+  }
+  75% {
+    opacity: 0;
+  }
+  76% {
+    opacity: 0;
+  }
+  78% {
+    opacity: 0.7;
+  }
+  80% {
+    opacity: 0.7;
+  }
+  85% {
+    opacity: 0;
+  }
+  86% {
+    opacity: 0;
+  }
+  88% {
+    opacity: 0.9;
+  }
+  90% {
+    opacity: 0.9;
+  }
+  90% {
+    opacity: 0;
+  }
+  91% {
+    opacity: 0;
+  }
+  93% {
+    opacity: 0.8;
+  }
+  95% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 0;
+  }
+  101% {
+    opacity: 0;
+  }
+  103% {
+    opacity: 0.8;
+  }
+  105% {
+    opacity: 0.8;
+  }
 }
