--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -37,3 +37,23 @@
 .absolute {
   position: absolute;
 }
+
+.left-0 {
+  left: 0;
+}
+
+.top-0 {
+  top: 0;
+}
+
+.cover-screen {
+  top: 0;
+  left: 0;
+  position: absolute;
+  content: '';
+  height: 100vh;
+}
+
+.backdrop-blur {
+  backdrop-filter: blur(5px);
+}
