--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -36,53 +36,60 @@ body {
   }
 }
 
+.hovering-1 {
+  animation-delay: 0s !important;
+}
+.hovering-2 {
+  animation-delay: 0.1s !important;
+}
+.hovering-3 {
+  animation-delay: 0.6s !important;
+}
+.hovering-4 {
+  animation-delay: 0.3s !important;
+}
+.hovering-5 {
+  animation-delay: 0.5s !important;
+}
+
 .outer-card {
-  animation: 3s ease-in-out 0s infinite running hovering;
+  animation: 3.2s ease-in-out 0s infinite running hovering;
   position: relative;
   transition: all .2s ease-out;
-  transform: scale(1);
+  transform: scale(.9);
   cursor: pointer;
   resize: both;
   &:active {
     cursor: grabbing;
   }
   &::before {
-    animation: 3s ease-in-out 0s infinite running glowingGreen;
     content: '';
     position: absolute;
-    opacity: 1;
+    opacity: .7;
     width: 286px;
     height: 395px;
     @include bgImg($cardImg);
-    top: 0; left: 0;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    transition: all 0.3s ease-in-out;
-    transform: translate(-11%, -7%) scale(1.05);
+    top: 0;
+    left: 0;
+    transition: opacity 0.3s ease-in-out;
+    transform: translate(-11%, -7%) scale(1.04);
     filter: brightness(10) sepia(1) hue-rotate(0deg) saturate(1) blur(10px);
+    background-color: #ffffff10;
+    z-index: 1;
   }
   &::after {
-    animation: 3s ease-in-out 0s infinite running glowingWhite;
+    animation: 3s ease-in-out 0s infinite running glowingGreen;
     content: "";
     position: absolute;
     width: 286px;
     height: 395px;
-    background-image: url(/src/assets/images/card.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: bottom;
+    @include bgImg($cardImg);
     top: 0;
     left: 0;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    transition: all 0.3s ease-out;
-    transform: translate(-11%, -8%) scale(1.1);
-    filter: brightness(2) sepia(1) hue-rotate(420deg) saturate(50) blur(2px);
-    opacity: 0.5;
+    transition: opacity 0.3s ease-out;
+    transform: translate(-11%, -7%) scale(1.1);
+    filter: brightness(2) sepia(1) hue-rotate(420deg) saturate(50) blur(2px) contrast(12);
   }
-  &:hover, &:active { &::before { opacity: 1; } }
 }
 
 .card-container {
@@ -146,10 +153,13 @@ body {
 
 @keyframes hovering {
   0% {
-    transform: scale3d(100%, 100%, 100%);
+    transform: scale(90%);
   }
   50% {
-    transform: scale3d(98%, 98%, 98%);
+    transform: scale(80%);
+  }
+  100% {
+    transform: scale(90%);
   }
 }
 
@@ -175,4 +185,19 @@ body {
   100% {
     opacity: .5;
   }
+}
+
+//html, body {
+//  margin: 0;
+//  height: 100%;
+//}
+
+#scene {
+  height: 100%;
+  width: 100%;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
 }
