Added an object to hold projects.

--- a/src/assets/styles/helpers/_functions.scss
+++ b/src/assets/styles/helpers/_functions.scss
@@ -10,7 +10,7 @@
 /*$values: (
         jc: ( justify-content: ( c: center, sb: space-between )),
         ji: ( justify-items: ( c: center, sb: space-between )),
-        js: ( justify-self: ( c: center, sb: space-between )),
+        scripts: ( justify-self: ( c: center, sb: space-between )),
         ac: ( align-content: ( c:center )),
         ai: ( align-items: ( c:center )),
         as: ( align-self: ( c:center ))
